# gearmind-bot

./: .env-non-dev  .gitignore  .merge_file_hgLS7G  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  get_env.py  logger.py  main.py  pyproject.toml  requirements.txt  requirements_BACKUP_1583.txt  requirements_BASE_1670.txt  requirements_LOCAL_1670.txt  scripts.sql  start.sh
Writerside/: r.tree  writerside.cfg
Writerside/topics/: readme.md
app/: exceptions.py
db/: db.py
db/cars/: cars.py  dao.py  models.py  repository.py  sync_dao.py  sync_repository.py
db/dao/: sync_base.py
db/models/: models.py
db/product_types/: products_types.py
db/repository/: base.py
db/users/: dao.py  models.py  repository.py  sync_dao.py  sync_repository.py  users.py
migrations/: env.py
migrations/versions/: 11c52083918d_add_triggers_and_index.py  215382221e99_fix_car_model.py  37909a7ec230_add_add_game_progress.py  4eced21cf74b_change_relation_from_users_to_profile.py  5dacd21cbd7a_fix_car_model3.py  759f80f6518c_nitial.py  809b9cbcf82d_add_threshold_to_profile.py  95e13239bfc9_initial.py  9e4aa87bf393_add_ondelete_scores.py  9f4866936a60_initial_migrations.py  a003ad4dd3c3_add_new_table.py  a0362bfd34e9_add_new_table2.py  a2ce75f58c99_add_add_roles.py  a65bbe3c5b0c_drop_tables.py  a76f90739c49_add_details.py  b90b7af86b1b_add_indexes.py  b9aafcc670a8_change_relation_from_users_to_profile.py  bd6024fc29ff_add_game_tasks.py  c5f4c0485014_add_scores.py  ccd9587965e5_initial_migration.py  cf1a2b61d4ca_add_new_fields_cars.py  df3a35224612_change_game_progress.py  e673854f9e45_initial_migration.py  e73c35c127bf_fix_car_model2.py  fe830cc8bf81_initial_migration.py
src/: .env  config.py  exceptions.py  main.py  models.py  settings.py
src/ai/: __init__.py  base_client.py
src/db/: db.py  (+4 more)
telegram/: bot.py  run_bot.py  states.py
(+187 files in other folders)
